# practical-numpy

./: .gitignore  Makefile  challenge2.md  launcher.py  planned_refactor.md  practical_numpy_00.ipynb  practical_numpy_01.ipynb  practical_numpy_02.ipynb  pyproject.toml  requirements.txt
code/: practical_numpy_00.ipynb
code/notebooks/: practical_numpy_01.ipynb
code/tests/challenge_01/: section_02.py
course/: pyproject.toml
course/notebooks/: 00_intro.ipynb  01_creating_arrays.ipynb  02_indexing_and_slicing.ipynb  pyproject.toml
course/src/challenge_01/: section_02.py  section_03.py  section_04.py
course/tests/challenge_01/: section_01.py  section_05.py
course/tests/challenge_02/: section_01.py  section_02.py  section_03.py
deploy/: README.md  build.bat  build_executable.py  compile.sh  deploy.py  format.sh
tests/: utils.py
tests/challenge_01/: section_01.py  section_02.py  section_03.py  section_04.py  section_05.py
wip-code/: practical_numpy_02.ipynb  requirements.txt
wip-code/tests/: utils.py
wip-code/tests/challenge_01/: section_01.py  section_04.py
wip-code/tests/challenge_02/: section_03.py
